Alias Analysis/A1/QTACoJavaParser.java

/* QTACoJavaParser.java */
/* Generated By:JavaCC: Do not edit this line. QTACoJavaParser.java */
import syntaxtree.*;
import java.util.Vector;

public class QTACoJavaParser implements QTACoJavaParserConstants {

  static final public Goal Goal() throws ParseException {
    MainClass n0;
    NodeListOptional n1 = new NodeListOptional();
    TypeDeclaration n2;
    NodeToken n3;
    Token n4;
    n0 = MainClass();
    label_1: while (true) {
      switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
      case CLASS: {
        ;
        break;
      }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      n2 = TypeDeclaration();
      n1.addNode(n2);
    }
    n1.nodes.trimToSize();
    n4 = jj_consume_token(0);
    n4.beginColumn++;
    n4.endColumn++;
    n3 = JTBToolkit.makeNodeToken(n4);
    {
      if ("" != null)
        return new Goal(n0, n1, n3);
    }
    throw new Error("Missing return statement in function");
  }

  static final public MainClass MainClass() throws ParseException {
    NodeToken n0;
    Token n1;
    Identifier n2;
    NodeToken n3;
    Token n4;
    NodeToken n5;
    Token n6;
    NodeToken n7;
    Token n8;
    NodeToken n9;
    Token n10;
    NodeToken n11;
    Token n12;
    NodeToken n13;
    Token n14;
    NodeToken n15;
    Token n16;
    NodeToken n17;
    Token n18;
    NodeToken n19;
    Token n20;
    Identifier n21;
    NodeToken n22;
    Token n23;
    NodeToken n24;
    Token n25;
    NodeListOptional n26 = new NodeListOptional();
    VarDeclaration n27;
    NodeListOptional n28 = new NodeListOptional();
    QStatement n29;
    NodeToken n30;
    Token n31;
    NodeToken n32;
    Token n33;
    n1 = jj_consume_token(CLASS);
    n0 = JTBToolkit.makeNodeToken(n1);
    n2 = Identifier();
    n4 = jj_consume_token(LBRACE);
    n3 = JTBToolkit.makeNodeToken(n4);
    n6 = jj_consume_token(PUBLIC);
    n5 = JTBToolkit.makeNodeToken(n6);
    n8 = jj_consume_token(STATIC);
    n7 = JTBToolkit.makeNodeToken(n8);
    n10 = jj_consume_token(VOID);
    n9 = JTBToolkit.makeNodeToken(n10);
    n12 = jj_consume_token(MAIN);
    n11 = JTBToolkit.makeNodeToken(n12);
    n14 = jj_consume_token(LPAREN);
    n13 = JTBToolkit.makeNodeToken(n14);
    n16 = jj_consume_token(STRING);
    n15 = JTBToolkit.makeNodeToken(n16);
    n18 = jj_consume_token(LSQPAREN);
    n17 = JTBToolkit.makeNodeToken(n18);
    n20 = jj_consume_token(RSQPAREN);
    n19 = JTBToolkit.makeNodeToken(n20);
    n21 = Identifier();
    n23 = jj_consume_token(RPAREN);
    n22 = JTBToolkit.makeNodeToken(n23);
    n25 = jj_consume_token(LBRACE);
    n24 = JTBToolkit.makeNodeToken(n25);
    label_2: while (true) {
      if (jj_2_1(2147483647)) {
        ;
      } else {
        break label_2;
      }
      n27 = VarDeclaration();
      n26.addNode(n27);
    }
    n26.nodes.trimToSize();
    label_3: while (true) {
      switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
      case LBRACE:
      case IF:
      case WHILE:
      case PRINT:
      case SCOMMENT1:
      case IDENTIFIER: {
        ;
        break;
      }
      default:
        jj_la1[1] = jj_gen;
        break label_3;
      }
      n29 = QStatement();
      n28.addNode(n29);
    }
    n28.nodes.trimToSize();
    n31 = jj_consume_token(RBRACE);
    n30 = JTBToolkit.makeNodeToken(n31);
    n33 = jj_consume_token(RBRACE);
    n32 = JTBToolkit.makeNodeToken(n33);
    {
      if ("" != null)
        return new MainClass(n0, n2, n3, n5, n7, n9, n11, n13, n15, n17, n19, n21, n22, n24, n26, n28, n30, n32);
    }
    throw new Error("Missing return statement in function");
  }

  static final public TypeDeclaration TypeDeclaration() throws ParseException {
    NodeChoice n0;
    ClassDeclaration n1;
    ClassExtendsDeclaration n2;
    if (jj_2_2(3)) {
      n1 = ClassDeclaration();
      n0 = new NodeChoice(n1, 0);
    } else {
      switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
      case CLASS: {
        n2 = ClassExtendsDeclaration();
        n0 = new NodeChoice(n2, 1);
        break;
      }
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    {
      if ("" != null)
        return new TypeDeclaration(n0);
    }
    throw new Error("Missing return statement in function");
  }

  static final public ClassDeclaration ClassDeclaration() throws ParseException {
    NodeToken n0;
    Token n1;
    Identifier n2;
    NodeToken n3;
    Token n4;
    NodeListOptional n5 = new NodeListOptional();
    VarDeclaration n6;
    NodeListOptional n7 = new NodeListOptional();
    MethodDeclaration n8;
    NodeToken n9;
    Token n10;
    n1 = jj_consume_token(CLASS);
    n0 = JTBToolkit.makeNodeToken(n1);
    n2 = Identifier();
    n4 = jj_consume_token(LBRACE);
    n3 = JTBToolkit.makeNodeToken(n4);
    label_4: while (true) {
      switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
      case BOOLEAN:
      case INTEGER:
      case IDENTIFIER: {
        ;
        break;
      }
      default:
        jj_la1[3] = jj_gen;
        break label_4;
      }
      n6 = VarDeclaration();
      n5.addNode(n6);
    }
    n5.nodes.trimToSize();
    label_5: while (true) {
      switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
      case PUBLIC: {
        ;
        break;
      }
      default:
        jj_la1[4] = jj_gen;
        break label_5;
      }
      n8 = MethodDeclaration();
      n7.addNode(n8);
    }
    n7.nodes.trimToSize();
    n10 = jj_consume_token(RBRACE);
    n9 = JTBToolkit.makeNodeToken(n10);
    {
      if ("" != null)
        return new ClassDeclaration(n0, n2, n3, n5, n7, n9);
    }
    throw new Error("Missing return statement in function");
  }

  static final public ClassExtendsDeclaration ClassExtendsDeclaration() throws ParseException {
    NodeToken n0;
    Token n1;
    Identifier n2;
    NodeToken n3;
    Token n4;
    Identifier n5;
    NodeToken n6;
    Token n7;
    NodeListOptional n8 = new NodeListOptional();
    VarDeclaration n9;
    NodeListOptional n10 = new NodeListOptional();
    MethodDeclaration n11;
    NodeToken n12;
    Token n13;
    n1 = jj_consume_token(CLASS);
    n0 = JTBToolkit.makeNodeToken(n1);
    n2 = Identifier();
    n4 = jj_consume_token(EXTENDS);
    n3 = JTBToolkit.makeNodeToken(n4);
    n5 = Identifier();
    n7 = jj_consume_token(LBRACE);
    n6 = JTBToolkit.makeNodeToken(n7);
    label_6: while (true) {
      switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
      case BOOLEAN:
      case INTEGER:
      case IDENTIFIER: {
        ;
        break;
      }
      default:
        jj_la1[5] = jj_gen;
        break label_6;
      }
      n9 = VarDeclaration();
      n8.addNode(n9);
    }
    n8.nodes.trimToSize();
    label_7: while (true) {
      switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
      case PUBLIC: {
        ;
        break;
      }
      default:
        jj_la1[6] = jj_gen;
        break label_7;
      }
      n11 = MethodDeclaration();
      n10.addNode(n11);
    }
    n10.nodes.trimToSize();
    n13 = jj_consume_token(RBRACE);
    n12 = JTBToolkit.makeNodeToken(n13);
    {
      if ("" != null)
        return new ClassExtendsDeclaration(n0, n2, n3, n5, n6, n8, n10, n12);
    }
    throw new Error("Missing return statement in function");
  }

  static final public VarDeclaration VarDeclaration() throws ParseException {
    Type n0;
    Identifier n1;
    NodeToken n2;
    Token n3;
    n0 = Type();
    n1 = Identifier();
    n3 = jj_consume_token(SEMICOLON);
    n2 = JTBToolkit.makeNodeToken(n3);
    {
      if ("" != null)
        return new VarDeclaration(n0, n1, n2);
    }
    throw new Error("Missing return statement in function");
  }

  static final public MethodDeclaration MethodDeclaration() throws ParseException {
    NodeToken n0;
    Token n1;
    Type n2;
    Identifier n3;
    NodeToken n4;
    Token n5;
    NodeOptional n6 = new NodeOptional();
    FormalParameterList n7;
    NodeToken n8;
    Token n9;
    NodeToken n10;
    Token n11;
    NodeListOptional n12 = new NodeListOptional();
    VarDeclaration n13;
    NodeListOptional n14 = new NodeListOptional();
    QStatement n15;
    NodeToken n16;
    Token n17;
    Identifier n18;
    NodeToken n19;
    Token n20;
    NodeToken n21;
    Token n22;
    n1 = jj_consume_token(PUBLIC);
    n0 = JTBToolkit.makeNodeToken(n1);
    n2 = Type();
    n3 = Identifier();
    n5 = jj_consume_token(LPAREN);
    n4 = JTBToolkit.makeNodeToken(n5);
    switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
    case BOOLEAN:
    case INTEGER:
    case IDENTIFIER: {
      n7 = FormalParameterList();
      n6.addNode(n7);
      break;
    }
    default:
      jj_la1[7] = jj_gen;
      ;
    }
    n9 = jj_consume_token(RPAREN);
    n8 = JTBToolkit.makeNodeToken(n9);
    n11 = jj_consume_token(LBRACE);
    n10 = JTBToolkit.makeNodeToken(n11);
    label_8: while (true) {
      if (jj_2_3(2)) {
        ;
      } else {
        break label_8;
      }
      n13 = VarDeclaration();
      n12.addNode(n13);
    }
    n12.nodes.trimToSize();
    label_9: while (true) {
      switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
      case LBRACE:
      case IF:
      case WHILE:
      case PRINT:
      case SCOMMENT1:
      case IDENTIFIER: {
        ;
        break;
      }
      default:
        jj_la1[8] = jj_gen;
        break label_9;
      }
      n15 = QStatement();
      n14.addNode(n15);
    }
    n14.nodes.trimToSize();
    n17 = jj_consume_token(RETURN);
    n16 = JTBToolkit.makeNodeToken(n17);
    n18 = Identifier();
    n20 = jj_consume_token(SEMICOLON);
    n19 = JTBToolkit.makeNodeToken(n20);
    n22 = jj_consume_token(RBRACE);
    n21 = JTBToolkit.makeNodeToken(n22);
    {
      if ("" != null)
        return new MethodDeclaration(n0, n2, n3, n4, n6, n8, n10, n12, n14, n16, n18, n19, n21);
    }
    throw new Error("Missing return statement in function");
  }

  static final public FormalParameterList FormalParameterList() throws ParseException {
    FormalParameter n0;
    NodeListOptional n1 = new NodeListOptional();
    FormalParameterRest n2;
    n0 = FormalParameter();
    label_10: while (true) {
      switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
      case 49: {
        ;
        break;
      }
      default:
        jj_la1[9] = jj_gen;
        break label_10;
      }
      n2 = FormalParameterRest();
      n1.addNode(n2);
    }
    n1.nodes.trimToSize();
    {
      if ("" != null)
        return new FormalParameterList(n0, n1);
    }
    throw new Error("Missing return statement in function");
  }

  static final public FormalParameter FormalParameter() throws ParseException {
    Type n0;
    Identifier n1;
    n0 = Type();
    n1 = Identifier();
    {
      if ("" != null)
        return new FormalParameter(n0, n1);
    }
    throw new Error("Missing return statement in function");
  }

  static final public FormalParameterRest FormalParameterRest() throws ParseException {
    NodeToken n0;
    Token n1;
    FormalParameter n2;
    n1 = jj_consume_token(49);
    n0 = JTBToolkit.makeNodeToken(n1);
    n2 = FormalParameter();
    {
      if ("" != null)
        return new FormalParameterRest(n0, n2);
    }
    throw new Error("Missing return statement in function");
  }

  static final public Type Type() throws ParseException {
    NodeChoice n0;
    ArrayType n1;
    BooleanType n2;
    IntegerType n3;
    Identifier n4;
    if (jj_2_4(3)) {
      n1 = ArrayType();
      n0 = new NodeChoice(n1, 0);
    } else {
      switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
      case BOOLEAN: {
        n2 = BooleanType();
        n0 = new NodeChoice(n2, 1);
        break;
      }
      case INTEGER: {
        n3 = IntegerType();
        n0 = new NodeChoice(n3, 2);
        break;
      }
      case IDENTIFIER: {
        n4 = Identifier();
        n0 = new NodeChoice(n4, 3);
        break;
      }
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    {
      if ("" != null)
        return new Type(n0);
    }
    throw new Error("Missing return statement in function");
  }

  static final public ArrayType ArrayType() throws ParseException {
    NodeToken n0;
    Token n1;
    NodeToken n2;
    Token n3;
    NodeToken n4;
    Token n5;
    n1 = jj_consume_token(INTEGER);
    n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(LSQPAREN);
    n2 = JTBToolkit.makeNodeToken(n3);
    n5 = jj_consume_token(RSQPAREN);
    n4 = JTBToolkit.makeNodeToken(n5);
    {
      if ("" != null)
        return new ArrayType(n0, n2, n4);
    }
    throw new Error("Missing return statement in function");
  }

  static final public BooleanType BooleanType() throws ParseException {
    NodeToken n0;
    Token n1;
    n1 = jj_consume_token(BOOLEAN);
    n0 = JTBToolkit.makeNodeToken(n1);
    {
      if ("" != null)
        return new BooleanType(n0);
    }
    throw new Error("Missing return statement in function");
  }

  static final public IntegerType IntegerType() throws ParseException {
    NodeToken n0;
    Token n1;
    n1 = jj_consume_token(INTEGER);
    n0 = JTBToolkit.makeNodeToken(n1);
    {
      if ("" != null)
        return new IntegerType(n0);
    }
    throw new Error("Missing return statement in function");
  }

  static final public QStatement QStatement() throws ParseException {
    NodeListOptional n0 = new NodeListOptional();
    Query n1;
    Statement n2;
    label_11: while (true) {
      switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
      case SCOMMENT1: {
        ;
        break;
      }
      default:
        jj_la1[11] = jj_gen;
        break label_11;
      }
      n1 = Query();
      n0.addNode(n1);
    }
    n0.nodes.trimToSize();
    n2 = Statement();
    {
      if ("" != null)
        return new QStatement(n0, n2);
    }
    throw new Error("Missing return statement in function");
  }

  static final public Query Query() throws ParseException {
    NodeToken n0;
    Token n1;
    Identifier n2;
    NodeToken n3;
    Token n4;
    Identifier n5;
    NodeToken n6;
    Token n7;
    n1 = jj_consume_token(SCOMMENT1);
    n0 = JTBToolkit.makeNodeToken(n1);
    n2 = Identifier();
    n4 = jj_consume_token(ALIAS);
    n3 = JTBToolkit.makeNodeToken(n4);
    n5 = Identifier();
    n7 = jj_consume_token(SCOMMENT2);
    n6 = JTBToolkit.makeNodeToken(n7);
    {
      if ("" != null)
        return new Query(n0, n2, n3, n5, n6);
    }
    throw new Error("Missing return statement in function");
  }

  static final public Statement Statement() throws ParseException {
    NodeChoice n0;
    Block n1;
    AssignmentStatement n2;
    ArrayAssignmentStatement n3;
    FieldAssignmentStatement n4;
    IfStatement n5;
    WhileStatement n6;
    PrintStatement n7;
    switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
    case LBRACE: {
      n1 = Block();
      n0 = new NodeChoice(n1, 0);
      break;
    }
    default:
      jj_la1[12] = jj_gen;
      if (jj_2_5(2)) {
        n2 = AssignmentStatement();
        n0 = new NodeChoice(n2, 1);
      } else if (jj_2_6(2)) {
        n3 = ArrayAssignmentStatement();
        n0 = new NodeChoice(n3, 2);
      } else if (jj_2_7(2)) {
        n4 = FieldAssignmentStatement();
        n0 = new NodeChoice(n4, 3);
      } else {
        switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
        case IF: {
          n5 = IfStatement();
          n0 = new NodeChoice(n5, 4);
          break;
        }
        case WHILE: {
          n6 = WhileStatement();
          n0 = new NodeChoice(n6, 5);
          break;
        }
        case PRINT: {
          n7 = PrintStatement();
          n0 = new NodeChoice(n7, 6);
          break;
        }
        default:
          jj_la1[13] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    {
      if ("" != null)
        return new Statement(n0);
    }
    throw new Error("Missing return statement in function");
  }

  static final public Block Block() throws ParseException {
    NodeToken n0;
    Token n1;
    NodeListOptional n2 = new NodeListOptional();
    QStatement n3;
    NodeToken n4;
    Token n5;
    n1 = jj_consume_token(LBRACE);
    n0 = JTBToolkit.makeNodeToken(n1);
    label_12: while (true) {
      switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
      case LBRACE:
      case IF:
      case WHILE:
      case PRINT:
      case SCOMMENT1:
      case IDENTIFIER: {
        ;
        break;
      }
      default:
        jj_la1[14] = jj_gen;
        break label_12;
      }
      n3 = QStatement();
      n2.addNode(n3);
    }
    n2.nodes.trimToSize();
    n5 = jj_consume_token(RBRACE);
    n4 = JTBToolkit.makeNodeToken(n5);
    {
      if ("" != null)
        return new Block(n0, n2, n4);
    }
    throw new Error("Missing return statement in function");
  }

  static final public AssignmentStatement AssignmentStatement() throws ParseException {
    Identifier n0;
    NodeToken n1;
    Token n2;
    Expression n3;
    NodeToken n4;
    Token n5;
    n0 = Identifier();
    n2 = jj_consume_token(ASSIGN);
    n1 = JTBToolkit.makeNodeToken(n2);
    n3 = Expression();
    n5 = jj_consume_token(SEMICOLON);
    n4 = JTBToolkit.makeNodeToken(n5);
    {
      if ("" != null)
        return new AssignmentStatement(n0, n1, n3, n4);
    }
    throw new Error("Missing return statement in function");
  }

  static final public ArrayAssignmentStatement ArrayAssignmentStatement() throws ParseException {
    Identifier n0;
    NodeToken n1;
    Token n2;
    Identifier n3;
    NodeToken n4;
    Token n5;
    NodeToken n6;
    Token n7;
    Identifier n8;
    NodeToken n9;
    Token n10;
    n0 = Identifier();
    n2 = jj_consume_token(LSQPAREN);
    n1 = JTBToolkit.makeNodeToken(n2);
    n3 = Identifier();
    n5 = jj_consume_token(RSQPAREN);
    n4 = JTBToolkit.makeNodeToken(n5);
    n7 = jj_consume_token(ASSIGN);
    n6 = JTBToolkit.makeNodeToken(n7);
    n8 = Identifier();
    n10 = jj_consume_token(SEMICOLON);
    n9 = JTBToolkit.makeNodeToken(n10);
    {
      if ("" != null)
        return new ArrayAssignmentStatement(n0, n1, n3, n4, n6, n8, n9);
    }
    throw new Error("Missing return statement in function");
  }

  static final public FieldAssignmentStatement FieldAssignmentStatement() throws ParseException {
    Identifier n0;
    NodeToken n1;
    Token n2;
    Identifier n3;
    NodeToken n4;
    Token n5;
    Identifier n6;
    NodeToken n7;
    Token n8;
    n0 = Identifier();
    n2 = jj_consume_token(DOT);
    n1 = JTBToolkit.makeNodeToken(n2);
    n3 = Identifier();
    n5 = jj_consume_token(ASSIGN);
    n4 = JTBToolkit.makeNodeToken(n5);
    n6 = Identifier();
    n8 = jj_consume_token(SEMICOLON);
    n7 = JTBToolkit.makeNodeToken(n8);
    {
      if ("" != null)
        return new FieldAssignmentStatement(n0, n1, n3, n4, n6, n7);
    }
    throw new Error("Missing return statement in function");
  }

  static final public IfStatement IfStatement() throws ParseException {
    NodeToken n0;
    Token n1;
    NodeToken n2;
    Token n3;
    Identifier n4;
    NodeToken n5;
    Token n6;
    Statement n7;
    NodeToken n8;
    Token n9;
    Statement n10;
    n1 = jj_consume_token(IF);
    n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(LPAREN);
    n2 = JTBToolkit.makeNodeToken(n3);
    n4 = Identifier();
    n6 = jj_consume_token(RPAREN);
    n5 = JTBToolkit.makeNodeToken(n6);
    n7 = Statement();
    n9 = jj_consume_token(ELSE);
    n8 = JTBToolkit.makeNodeToken(n9);
    n10 = Statement();
    {
      if ("" != null)
        return new IfStatement(n0, n2, n4, n5, n7, n8, n10);
    }
    throw new Error("Missing return statement in function");
  }

  static final public WhileStatement WhileStatement() throws ParseException {
    NodeToken n0;
    Token n1;
    NodeToken n2;
    Token n3;
    Identifier n4;
    NodeToken n5;
    Token n6;
    Statement n7;
    n1 = jj_consume_token(WHILE);
    n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(LPAREN);
    n2 = JTBToolkit.makeNodeToken(n3);
    n4 = Identifier();
    n6 = jj_consume_token(RPAREN);
    n5 = JTBToolkit.makeNodeToken(n6);
    n7 = Statement();
    {
      if ("" != null)
        return new WhileStatement(n0, n2, n4, n5, n7);
    }
    throw new Error("Missing return statement in function");
  }

  static final public PrintStatement PrintStatement() throws ParseException {
    NodeToken n0;
    Token n1;
    NodeToken n2;
    Token n3;
    Identifier n4;
    NodeToken n5;
    Token n6;
    NodeToken n7;
    Token n8;
    n1 = jj_consume_token(PRINT);
    n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(LPAREN);
    n2 = JTBToolkit.makeNodeToken(n3);
    n4 = Identifier();
    n6 = jj_consume_token(RPAREN);
    n5 = JTBToolkit.makeNodeToken(n6);
    n8 = jj_consume_token(SEMICOLON);
    n7 = JTBToolkit.makeNodeToken(n8);
    {
      if ("" != null)
        return new PrintStatement(n0, n2, n4, n5, n7);
    }
    throw new Error("Missing return statement in function");
  }

  static final public Expression Expression() throws ParseException {
    NodeChoice n0;
    AndExpression n1;
    CompareExpression n2;
    PlusExpression n3;
    MinusExpression n4;
    TimesExpression n5;
    ArrayLookup n6;
    ArrayLength n7;
    MessageSend n8;
    FieldRead n9;
    PrimaryExpression n10;
    if (jj_2_8(2147483647)) {
      n1 = AndExpression();
      n0 = new NodeChoice(n1, 0);
    } else if (jj_2_9(2147483647)) {
      n2 = CompareExpression();
      n0 = new NodeChoice(n2, 1);
    } else if (jj_2_10(2147483647)) {
      n3 = PlusExpression();
      n0 = new NodeChoice(n3, 2);
    } else if (jj_2_11(2147483647)) {
      n4 = MinusExpression();
      n0 = new NodeChoice(n4, 3);
    } else if (jj_2_12(2147483647)) {
      n5 = TimesExpression();
      n0 = new NodeChoice(n5, 4);
    } else if (jj_2_13(2147483647)) {
      n6 = ArrayLookup();
      n0 = new NodeChoice(n6, 5);
    } else if (jj_2_14(2147483647)) {
      n7 = ArrayLength();
      n0 = new NodeChoice(n7, 6);
    } else if (jj_2_15(2147483647)) {
      n8 = MessageSend();
      n0 = new NodeChoice(n8, 7);
    } else if (jj_2_16(2147483647)) {
      n9 = FieldRead();
      n0 = new NodeChoice(n9, 8);
    } else {
      switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
      case NOT:
      case FALSE:
      case NEW:
      case THIS:
      case TRUE:
      case INTEGER_LITERAL:
      case IDENTIFIER: {
        n10 = PrimaryExpression();
        n0 = new NodeChoice(n10, 9);
        break;
      }
      default:
        jj_la1[15] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    {
      if ("" != null)
        return new Expression(n0);
    }
    throw new Error("Missing return statement in function");
  }

  static final public AndExpression AndExpression() throws ParseException {
    Identifier n0;
    NodeToken n1;
    Token n2;
    Identifier n3;
    n0 = Identifier();
    n2 = jj_consume_token(AND);
    n1 = JTBToolkit.makeNodeToken(n2);
    n3 = Identifier();
    {
      if ("" != null)
        return new AndExpression(n0, n1, n3);
    }
    throw new Error("Missing return statement in function");
  }
